localization/hartex-localization-test/tests/ui/expected_string_literal3.stderr
error: expected string literal
  --> tests/ui/expected_string_literal3.rs:27:107
   |
27 |     bundle_get_args!(bundle."bundle-get-args-test-message": message, out [irrelevant, irrelevant2], args [5077 to irrelevant4]);
   |                                                                                                           ^^^^
